remove gap to solve justification in manu-list

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -57,9 +57,6 @@ footer {
 header {
   width: 100%;
   position: fixed;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
   z-index: 1;
   padding: 0;
   margin: 0;
@@ -72,12 +69,16 @@ header {
   display: flex;
   flex-direction: row;
   list-style: none;
-  gap: 10px;
   text-align: center;
   align-items: center;
+  justify-content: space-between;
   margin: 0;
 }
 
+.menu-list__item {
+  padding: 0;
+  margin: 0;
+}
 .logo {
   display: none;
 }
